...
        component={VaultScreen}
        options={{ title: 'My Anchors' }}
      />
      <Stack.Screen
        name="AnchorDetail"
        component={AnchorDetailScreen}
        options={{ title: 'Anchor Details' }}
      />
      <Stack.Screen
        name="CreateAnchor"
        component={IntentionInputScreen}
        options={{ title: 'Create Anchor' }}
      />
...
